--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="container">
             <header>
                 <div class="logo">
-                    <img src="./Assets/images/logo.png" alt="Logo Audi">
+                    <a href="file:///C:/Users/toni/Desktop/First%20project/index.html">
+                        <img src="./Assets/images/logo.png" alt="Logo Audi"></a>
                 </div>
                 <nav>
                     <ul>
